--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-"prefix": "your-prefix",
-"token": "your-token"
+"prefix": "K51",
+"token": "MTAzNzM1OTIyMzY5ODM2MjM3OA.Gl9FYL.AqaNzeqbrW7pU6ymdFdXXCVoY6iHNME4BIiSaY"
 }
